<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="12dp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="80dp" />
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="btn_search" />
        <TextView
            android:id="@+id/search_by_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/radio_group"
            app:layout_constraintStart_toStartOf="@id/start"
            android:text="@string/search_by"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:checkedButton="@id/rb_city_name">
            <RadioButton
                android:id="@+id/rb_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_city_name"
                android:padding="10dp"
                />
            <RadioButton
                android:id="@+id/rb_coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coordinates"
                android:padding="10dp"
                />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatEditText
            android:background="@drawable/edit_text_bg"
            android:id="@+id/et_search_city_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/barrier"
            android:padding="10dp"
            android:hint="@string/search_city_name"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:background="@drawable/edit_text_bg"
            android:id="@+id/et_search_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintEnd_toStartOf="@id/et_search_longitude"
            app:layout_constraintTop_toTopOf="@id/barrier"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/search_latitude"
            android:visibility="gone"
            android:inputType="numberDecimal|numberSigned"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:background="@drawable/edit_text_bg"
            android:id="@+id/et_search_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/et_search_latitude"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/barrier"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/search_longitude"
            android:visibility="gone"
            android:inputType="numberDecimal|numberSigned"
            />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/end"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_baseline_search_24"
            />
        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>